--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
-.App {
-  text-align: center;
+body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav{
+  
+  width: 100%;
+  height: 4rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding : 5px
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+nav > .Logo {
+display : flex;
+flex-direction: row;
+gap: 20px;
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 23px;
+padding-left: 10px;
+
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+.Logo >  img{
+  width : 50px
+}
+
+
+.ListNav > ul,li{
+  display:inline-block;
+  list-style: none;
+  padding-right: 30px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  cursor: pointer;
+}
+
+
+.header{
+  
+  width: 100%;
+  height: auto;
+  display : flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  
+}
+
+.HeaderText{
+
+  width: 30rem;
+  height: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  word-break: break-all;
 }
 
-.App-link {
-  color: #61dafb;
+.HeaderText > p{
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 26px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.HeaderText > h1{
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 49px;
+line-height: 60px;
+}
+
+.HeaderText > img{
+  width : 50px
+}
+
+.header > img{
+  width : auto;
+  height : auto;
 }
