--- a/src/App.css
+++ b/src/App.css
@@ -145,9 +145,6 @@ border: 1px solid white;
 
 
 
-
-
-
 main{
   border: 3px solid black;
   width: 76rem;
@@ -155,4 +152,31 @@ main{
   margin-left: auto;
   margin-right: auto;
   padding: 10px;
+}
+
+
+/* grand écran  */
+
+
+@media screen and (min-width: 1900px){
+
+  .header{
+  
+    width: 100%;
+    height: auto;
+    display : flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    
+  }
+
+
+  .typing{
+    color: green;
+    word-break: break-all;
+    font-size: 39px;
+    
+    }
+
 }
